fix: to show the correct size of images in html_text before load the ckeditor, and set the text_area toolbar up the images in the z-index.

--- a/core/component_text_area/css/component_text_area.less
+++ b/core/component_text_area/css/component_text_area.less
@@ -166,7 +166,7 @@
 			top: 0px;
 			padding: 0px;
 			text-align: right;
-			z-index: 2;
+			z-index: 3;
 
 			>.button {
 				margin: 0.5em;
